Fixes #16406: Wrong vertical alignement of numerous items

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-datatable.css
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-datatable.css
@@ -235,6 +235,9 @@ td.listclose:after {
   float: left;
   width: 100%;
 }
+.dataTable > tbody > tr > td.details ul {
+  margin-bottom: 0;
+}
 .dataTable .dataTable .innerDetails {
   border-top: none !important;
 }
